[3.0] Baking materials with alpha transparency makes background objects bleed through #93082

Closed
opened 2021-11-14 22:52:55 +01:00 by Andrei Alexeyev · 6 comments

System Information
Operating system: openSUSE Tumbleweed
Graphics card: N/A (CPU bake)

Blender Version
Broken: 3.0 beta 22ffd69a91
Worked: 2.93; probably 3.0 before Cycles-X merge

Short description of error
When baking a material that has alpha transparency, foreign background objects are included in the baked image. Blender 2.93, on the other hand, seems to blend them against a solid black background (which is also not ideal; it would be preferable to bake alpha into the image's alpha channel, but that seems to be a missing feature rather than a bug).

Exact steps for others to reproduce the error

  1. Open the test file in Blender 3.0
  2. Press "bake".
  3. Observe result:
    bad.png
  4. Open the test file in Blender 2.93.
  5. Press "bake".
  6. Observe result:
    good.png

Note that 3.0 also seems to black out the entire image here, even though it is initially transparent.

Test file: baketest2.blend

**System Information** Operating system: openSUSE Tumbleweed Graphics card: N/A (CPU bake) **Blender Version** Broken: 3.0 beta 22ffd69a91c9 Worked: 2.93; probably 3.0 before Cycles-X merge **Short description of error** When baking a material that has alpha transparency, foreign background objects are included in the baked image. Blender 2.93, on the other hand, seems to blend them against a solid black background (which is also not ideal; it would be preferable to bake alpha into the image's alpha channel, but that seems to be a missing feature rather than a bug). **Exact steps for others to reproduce the error** 1. Open the test file in Blender 3.0 2. Press "bake". 3. Observe result: ![bad.png](https://archive.blender.org/developer/F11804340/bad.png) 4. Open the test file in Blender 2.93. 5. Press "bake". 6. Observe result: ![good.png](https://archive.blender.org/developer/F11804344/good.png) Note that 3.0 also seems to black out the entire image here, even though it is initially transparent. Test file: [baketest2.blend](https://archive.blender.org/developer/F11804347/baketest2.blend)

Added subscriber: @Akaricchi

Added subscriber: @Akaricchi
Andrei Alexeyev changed title from Baking materials with alpha transparency makes background objects bleed through to [3.0] Baking materials with alpha transparency makes background objects bleed through 2021-11-14 22:53:45 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by blender/cycles@15ec81b2d4

This issue was referenced by blender/cycles@15ec81b2d49639a82abb2efcab4941db679b6b5e

This issue was referenced by f0be276514

This issue was referenced by f0be276514f2b7cae27c744ac80f999fbc69f12f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-11-18 17:47:18 +01:00

This is how it bakes now:
bake_test_transparent.png

This is how it bakes now: ![bake_test_transparent.png](https://archive.blender.org/developer/F11825305/bake_test_transparent.png)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93082
No description provided.